# Uniqlo-WebScraping

./: .gitignore  LICENSE  README.md  pyproject.toml
src/uniqlowebscraping/: __main__.py
