[project]
name = "uniqlowebscraping"
version = "1.0.0"
description = "Add your description here"
authors = [
    { name = "TK17250", email = "TXK285@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/uniqlowebscraping"]
